--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="accent" class="mat-elevation-z2">
   <mat-toolbar-row>
     <mat-icon>map</mat-icon> Localizador de endereço
   </mat-toolbar-row>
